--- a/build
+++ b/build
@@ -1,3 +1,16 @@
 #!/bin/bash
+set -o errexit
+
 mkdir -p ebin
 erlc -o ebin src/indents.erl
+erlc -o ebin src/cerlish.erl
+echo '#!/usr/bin/env escript' > bin/cerlish
+echo '%%! -smp enable +h 4096' >> bin/cerlish
+erl -noinput -eval '
+	zip:create(".cerlish.ez",
+		["cerlish.beam", "indents.beam"],
+		[{cwd,"ebin"},{compress, all}, {uncompress, [".beam", ".app"]}]).
+	' -run init stop
+cat .cerlish.ez >> bin/cerlish
+chmod u+x bin/cerlish
+rm .cerlish.ez
