--- a/build
+++ b/build
@@ -3,21 +3,27 @@ set -o errexit
 
 mkdir -p ebin
 mkdir -p bin
+echo Compiling indents
 erlc -o ebin src/indents.erl
+echo Compiling ungbarc
 erlc -o ebin src/ungbarc.erl
+echo Turning peg into erl via neotoma
 erl -noinput -eval 'neotoma:file("grammar/ungbar.peg").' -run init stop
 ## Uncomment next line for debug-info to screen
 #sed -i.bk 's/p(Inp, StartIndex, Name, ParseFun, TransformFun) ->/& io:format("~s | ~p | ~p~n", [Name, StartIndex, case Inp of [I|_]->[I];_->"eof" end]),/' grammar/ungbar.erl
+echo Compiling ungbar
 erlc -o ebin grammar/ungbar.erl
 ## Comment next line to retain grammar/ungbar.erl for analysis
 #rm grammar/ungbar.erl
 rm -f ungbar.erl.bk
 rm -f grammar/ungbar.erl.bk
+echo Creating archive
 erl -noinput -eval '
 	zip:create(".ungbarc.ez",
 		["ungbarc.beam", "indents.beam", "ungbar.beam"],
 		[{cwd,"ebin"},{compress, all}, {uncompress, [".beam", ".app"]}]).
 	' -run init stop
+echo Turning archive into escript executable
 echo '#!/usr/bin/env escript' > bin/ungbarc
 echo '%%! -smp enable +h 4096' >> bin/ungbarc
 cat .ungbarc.ez >> bin/ungbarc
